test/tests/stages/18_structures/invalid_types/initializers/initialize_struct_with_scalar.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: pair
                  Bool: 0
                  List[2]: 
                    CMemberDeclaration: 
                      TIdentifier: x
                      Int: 
                    CMemberDeclaration: 
                      TIdentifier: y
                      Int: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: p
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Structure: 
                    TIdentifier: pair
                    Bool: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
